--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Dog Adoption</h1>
+	<ul>
+		<li>
+			<a href ="https://en.wikipedia.org/wiki/Golden_Retriever"
+		</li>
+		<li>
+			<a href = "https://en.wikipedia.org/wiki/Poodle"
+		</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
