--- a/main.html
+++ b/main.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dog Adoption</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<ul>
-		<li>
-			<a href ="https://en.wikipedia.org/wiki/Golden_Retriever"
-			   </a>
-		</li>
-		<li>
-			<a href = "https://en.wikipedia.org/wiki/Poodle"
-				</a>
-		</li>
-	</ul>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <h1>Dog Adoption</h1>
+  <ul>
+    <li>
+      <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank" aria-label="Learn more about Golden Retriever on Wikipedia">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Golden_Retriever_Buddy.jpg" alt="Golden Retriever">
+      </a>
+    </li>
+    <li>
+      <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank" aria-label="Learn more about Poodle on Wikipedia">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Poodle-Miniature-puppy-cut.jpg" alt="Poodle">
+      </a>
+    </li>
+  </ul>
+  <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
