--- a/main.html
+++ b/main.html
@@ -9,18 +9,17 @@
 </head>
 
 <body>
-  <h1>Dog Adoption</h1>
   <ul>
-    <li>
-      <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank" aria-label="Learn more about Golden Retriever on Wikipedia">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Golden_Retriever_Buddy.jpg" alt="Golden Retriever">
-      </a>
-    </li>
-    <li>
-      <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank" aria-label="Learn more about Poodle on Wikipedia">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Poodle-Miniature-puppy-cut.jpg" alt="Poodle">
-      </a>
-    </li>
+	  <li>
+		  <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+			  <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg">
+		  </a>
+	  </li>
+	  <li>
+		  <a href="https://en.wikipedia.org/wiki/Poodle">
+			  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg">
+		  </a>
+	  </li>
   </ul>
   <script type="text/javascript" src="./script.js"></script>
 </body>
